<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <groupId>cc.uncarbon.framework</groupId>
    <artifactId>helio-starters-parent</artifactId>
    <version>${revision}</version>

    <name>${project.artifactId}</name>
    <description>Java project for Helio development framework</description>
    <url>https://github.com/uncarbon97</url>

    <properties>
        <revision>4.0.0-SNAPSHOT</revision>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <modules>
        <module>helio-starter-bom</module>
        <module>helio-starter-dependencies</module>
        <module>helio-core-base</module>
        <module>helio-core-db</module>
        <module>helio-core-tenant</module>
        <module>helio-starter-base</module>
        <module>helio-starter-db-dynamic-datasource</module>
        <module>helio-starter-db-mybatis-plus</module>
        <module>helio-starter-jackson3</module>
        <module>helio-starter-ratelimiter-redis</module>
        <module>helio-starter-redis</module>
        <module>helio-starter-satoken</module>
        <module>helio-starter-tenant</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- 内部依赖版本管理 -->
            <dependency>
                <groupId>cc.uncarbon.framework</groupId>
                <artifactId>helio-starter-bom</artifactId>
                <version>${revision}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- 外部依赖版本管理 -->
            <dependency>
                <groupId>cc.uncarbon.framework</groupId>
                <artifactId>helio-starter-dependencies</artifactId>
                <version>${revision}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 仓库信息 -->
    <scm>
        <tag>2.x</tag>
        <url>https://github.com/uncarbon97/helio-starters.git</url>
        <connection>scm:git:https://github.com/uncarbon97/helio-starters.git</connection>
        <developerConnection>scm:git:https://github.com/uncarbon97/helio-starters.git</developerConnection>
    </scm>

    <profiles>
        <profile>
            <id>push-helio-starters-to-maven-central</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <!-- Maven 编译插件 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.1</version>
                        <configuration>
                            <source>${java.version}</source>
                            <target>${java.version}</target>
                        </configuration>
                    </plugin>

                    <!-- 源码打包插件 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals><goal>jar-no-fork</goal></goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- Javadoc 打包插件 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.5.0</version>
                        <configuration>
                            <show>private</show>
                            <nohelp>true</nohelp>
                            <charset>UTF-8</charset>
                            <encoding>UTF-8</encoding>
                            <docencoding>UTF-8</docencoding>
                            <!-- 解决不规范的Javadoc生成报错 -->
                            <doclint>none</doclint>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals><goal>jar</goal></goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- GPG 签名插件 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals><goal>sign</goal></goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- 部署插件 -->
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.8.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
